08.30.2005:

	* Added copy/pasting. Currently you can only make selections
	inside one block. Also cutting doesn't work yet
	
08.26.2005:

	* Added advanced reexecution of cells. Use the new NBShell->Rerun
	menu.

08.25.2005
	* Added printing support

	* Added support for exporting notebooks using nbdoc

	* Ctrl-Enter now reruns the current cell and all cells after it
	
08.22.2005
	* Changed NewCell to Cell to match the cleanup in nbdoc --antont

	* Fixed some UI glitches

	* Added a CellCtrlBase class which will be a base class for all
	controlls used for displaying parts of the notebook

	* Added mouse wheel support

	* Added proper support for deleting characters in a Python code
	block using the Delete and Backspace keys
	

08.18.2005:
	* Fixed a bug in DeleteCell

	* Changed nbshell to use the NewCell class in nbdoc
08.17.2005:
	* Added tests for deleting and inserting blocks

	* Fixed some bugs
08.16.2005:
	* Added deletion of cells

	* Added some testing framework and one test

	* Added some methods for testing the notebook format
	
08.13.2005:
	* Changed format of notebook files. Now nbshell supports the
	docbook format.

	* Refactored methods for inserting cells in the notebook and added
	UI to use them

08.10.2005:
	* Added a type variable in each XXXDocumnetPlugin class the
	current types are 'python', 'plaintext' and 'figure'

	* Added a property currentcell in the sheet, whichs points to the
	active cell, and a property position in the python and plaintext
	plugins which returns the current position in the plugin.

	* Fixed a bug where the last input disappears after a save

	* Changed bahaviour. Now the cell with number 0 contains code
	which should not be displayed on the sheet. However the
	default_sheet method in notabene.notebook.Notebook does display
	this cell on the sheet.

	* Added support for the Matplotlib plotting library. Currently a
	function grab_figure(caption=None) is exposed in the user